--- a/UseCaseAndroid/app/src/main/res/values/strings.xml
+++ b/UseCaseAndroid/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">UseCaseAndroid</string>
     <string name="action_settings">Settings</string>
+    <string name="resource">ASSADds</string>
 </resources>
